[tool.poetry]
name = "scholar-api"
version = "1.0.0"
description = "Google Scholar Search API"
authors = ["Parag Patil <patilparag96@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
Flask-RESTful = "^0.3.9"
flasgger = "^0.9.5"
scholarly = "^1.7.0"

[tool.poetry.scripts]
scholar-api = "app:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"